syntax="proto3";

package pb;

option go_package="./;pb";

service greeter{
    rpc UserLogin (LoginRequest) returns (LoginResponse){};
}

message LoginRequest{
   string username=1;
   string passwrod=2;
   string repassword=3;
   string email=4;
}

message LoginResponse{
   string msg=1;
   int64 identity=2;
}